# ca

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile
include/: AnimatedCA.hpp  AnimatedCA1D.h  AnimatedCA2D.h  CA.h  CellularAutomaton.h  CentralInitCA1D.h  CentralInitCA2D.h  FirstOrderCA1D.h  FirstOrderCA2D.h  IAnimatedCA.hpp  IAnimatedCA1D.h  IAnimatedCA2D.h  ICellularAutomaton.h  ICentralInitCA1D.h  ICentralInitCA2D.h  IFirstOrderCA1D.h  IFirstOrderCA2D.h  IMooreCA1D.h  IMooreCA2D.h  IRandomInitCA.hpp  ISecondOrderCA1D.h  IVonNeumannCA2D.h  RandomInitCA.hpp  SecondOrderCA1D.h
src/: AnimatedCA1D.cpp  AnimatedCA2D.cpp  CentralInitCA1D.cpp  CentralInitCA2D.cpp  FirstOrderCA1D.cpp  FirstOrderCA2D.cpp  IAnimatedCA1D.cpp  IAnimatedCA2D.cpp  ICentralInitCA1D.cpp  ICentralInitCA2D.cpp  IFirstOrderCA1D.cpp  IFirstOrderCA2D.cpp  IMooreCA1D.cpp  IMooreCA2D.cpp  ISecondOrderCA1D.cpp  IVonNeumannCA2D.cpp  SecondOrderCA1D.cpp  main.cpp
test/: AsynchronousRule30.hpp  BriansBrain.hpp  HybridRules90_150.hpp  LangtonsAnt.hpp  Life.hpp  RandomCA1D.hpp  RockPaperScissor.hpp  Rule30.hpp  SecondOrderRule150.hpp  Snowflake.hpp  main.cpp
